# Operations_Router_CiDeR

./: CHANGELOG  README.md  pyproject.toml
conf/: route_rdr.conf.example  route_rdr.conf.prod  router_cider.conf.prod
sbin/: route_rdr.daemon  route_rdr.dev  route_rdr.rc  route_rdr.rc.debug  route_rdr.service  route_rdr.sh  route_rdr.sysconfig  router_cider.service  router_cider.service.sh  router_cider.sh  router_cider.sysconfig
